# milvus-examples

./: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  README.md  demo_guide.md  docker-compose.yml  experiment_guide.md  pyproject.toml
demo/: .gitignore  quickstart.ipynb  quickstart.py
demo/examples/: milvus_indexer_example.py
demo/examples/retrieval_evaluator/: example2.xlsx  retrieval_evaluator.py  text2sql_test_description.xlsx
demo/examples/retrieval_evaluator/vmilvus/: utils.py  vectordb.py
demo/examples/shilla/example_db_desc_gen/: README.md  create_collection.py  example.ipynb  load_db_desc_gen_result.py
demo/examples/shilla/example_db_desc_gen/data/: minho_test_20250526.json
demo/examples/shilla/example_human_gen/: README.md  helper.py  shilla_example.ipynb
demo/examples/shilla/example_human_gen/data/database_description/: daily_finished_goods_agg.csv  erp_dm_subc_edited.csv  erp_pm_ncr_mod.csv  item_master.csv  monthly_production_metrics.csv
demo/notebooks/: Graph-RAG.ipynb  Image-Search.ipynb  Multi-Modal-RAG.ipynb  Vector-Visualization.ipynb
demo/py/: 01-build-rag.py  02-full-text-search.py  03-hybrid-search.py  04-image-search.py  05-Multimodal-RAG.py  06-graph-rag.py  dataset.py
demo/py/configs/: config.yaml  config_build_rag.yaml  config_full_text_search.yaml  config_google.yaml  config_graph_rag.yaml  config_hybrid_search.yaml  config_image_search.yaml  config_multimodal.yaml  config_ollama.yaml  config_openai.yaml
demo/tutorials/: Advanced-RAG.ipynb  Build-RAG.ipynb  Contextual-Retrieval.ipynb  Full-Text-Search.ipynb  Graph-RAG.ipynb  Image-Search.ipynb  Multi-Modal-RAG.ipynb  Vector-Visualization.ipynb  indexing.ipynb
experiments/: ex1.ipynb  ex2.ipynb
experiments/data/: _generated_schemas_shilla_t2s_devloper_gemma3_12b_20250528_shilla_t2s_devloper_gemma3_12b_20250528.json  _generated_schemas_shilla_t2s_devloper_gemma3_12b_20250604.json
milvus/: conf.py  utils.py
milvus/client/: __init__.py  create_collection.py  drop_collection.py  utils.py
milvus/image/: __init__.py  feature.py  utils.py
milvus/model/: api_calls.py  model.py
milvus/preprocess/: preprocess.py  td2docs.py  td2docs_column.py
milvus_indexer/: README.md  __init__.py  milvus_indexer.py
tests/data/: data.json
tests/preprocess/: test_load_table_descritions.py  test_preprocess_td.py
