[project]
name = "milvus-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "cohere>=5.17.0",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "flagembedding>=1.3.5",
    "ftfy>=6.3.1",
    "hdbscan>=0.8.40",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-milvus>=0.2.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "matplotlib>=3.10.3",
    "openai>=1.97.1",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "peft>=0.16.0",
    "plotly>=6.3.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pymilvus[model]>=2.5.10",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sqlglot>=26.20.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "timm>=1.0.19",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "voyageai>=0.3.4",
]

[dependency-groups]
tutorials = [
    "dotenv>=0.9.9",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "pymilvus>=2.5.8",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vmilvus"]

[tool.uv.sources]
vmilvus = [
    { path = ".", editable = true }
]

[tool.ruff]
fix = false
line-length = 120
lint.select = ["A", "B", "C4", "E", "F", "I", "N", "W"]
lint.ignore = ["C901", "D", "W191", "N815", "B008", "N812", "B904"]
lint.exclude = [".venv/*", "protos/*", ".teamcity/*", "doc/*", "prompts.py"]
